0.0.1:

* Initial release.

0.0.2:

* Fixed pathlib compatibility on some versions of Python

* Switched compression method to ZIP_DEFLATED for better compatibility

* Fixed various minor issues that broke with pyinstaller

* pretor-psf how stores the Pretor version and PSF format revision number in
  each PSF file. PSFs with missing format revisions are assumed to be revision
  0, which is the current. PSFs with newer format revisions will not be
  unpacked.

0.0.3:

* --no_meta_check, --allow_no_tom, and --disable_version_check now write keys
  into both metadata and forensic data.

* Implemented support for a 'valid_assignment_names' field in pretor.toml,
  which causes pretor-psf --create to validate that the specified assignment
  name is one of those specified in this list.

* Implemented --interact action in pretor-psf, allowing in-place grading without
  using pretor-grade.

* Implemented --coursepath flag in pretor-psf, for use with --interact.

* Implemented --lsrev action in pretor-psf.

0.0.4:

* Implemented pretor-query command

* Fixed a bug where pretor-psf --interact could crash when interacting with
  an existing revision.

* Implemented pretor-psf --diff

* pretor.toml exclude list is honored while backing up from an interact session

* Implemented pretor-psf --modifymetadata

* Fixed a serious bug where the canonical grade revision would always be
  detected as graded_0, regardless of the number of grade revisions.

* Implemented pretor-import

0.0.5:

* Fixed a bug in pretor-query where forensic_* fields would always be empty

* Fixed a bug in pretor-query where the database would be written to a file
  on disk named "memory", rather than stored in memory

* Switched from 'toml' to 'tomlkit'. This is expected to fix a class of rare
  bug on some versions of the toml library that have been observed in the
  wild where certain fields would not be recognized as valid by the toml
  parser and prevent PSFs from being loaded.